--- a/Mitre Att&ck/T1562.001.md
+++ b/Mitre Att&ck/T1562.001.md
@@ -1,9 +1,10 @@
 ## Incident Response Playbook – Agent Disconnection
 
 ### 1. Overview
-- **Playbook Name:** Agent Disconnection Response
-- **Related Framework(s):** MITRE ATT&CK
-- **Last Updated:** [YYYY-MM-DD]
+| Tactic | Technique ID | Technique Name | Platforms | Permissions Required | Last Updated|
+| ------ | ------------ | -------------- | ---------- |--------------------- |-----------|
+|Defense Evasion | T1562.001 |Disable or Modify | Linux,MacOs,windows| root                 | [YYYY-MM-DD]|
+
 
 ### 2. Scope
 - **Objective:** Detect and respond to an agent that has been disconnected for an extended period.
@@ -14,8 +15,8 @@
 
 | **Trigger Type** | **Description** | **Detection Source** |
 |-----------------|----------------|----------------------|
-| **Alert** | Agent disconnected for 7+ days | Wazuh SIEM |
-| **Event** | Agent fails multiple connection attempts | Log Analysis |
+| **Alert** | Agent disconnected for an extended period | Wazuh SIEM |
+
 
 
 ### 4. Response Actions
@@ -26,7 +27,6 @@
 - Verify **host availability** (ping, SSH/RDP).
 
 #### 4.2 Containment
-- Notify responsible teams via **Slack/Jira**.
 - Disable agent-related access if compromise is suspected.
 
 #### 4.3 Eradication & Recovery
@@ -42,13 +42,8 @@
 - Conduct a brief **team debriefing** on findings.
 
 ### 5. References & Documentation
-- **MITRE ATT&CK Tactics:** Persistence (T1547), Command & Control (T1071)
-- **Wazuh Documentation:** Agent connection monitoring, troubleshooting
+- **MITRE ATT&CK Tactics:** Persistence (T1547)
+- **Wazuh Documentation:** Agent connection monitoring, [agent state](https://documentation.wazuh.com/current/user-manual/reference/tools/wazuh-control.html)
 
-### 6. Incident Report
 
-1. **Summary:** Disconnection cause and impact.
-2. **Detection Details:** Logs and alerts from Wazuh.
-3. **Response Actions:** Steps taken for resolution.
-4. **Root Cause & Fixes:** Findings and security measures.
-5. **Team & Roles:** Personnel involved in response.
+
