--- a/Mitre Att&ck/T1562.001.md
+++ b/Mitre Att&ck/T1562.001.md
@@ -3,12 +3,12 @@
 ### 1. Overview
 | Tactic | Technique ID | Technique Name | Platforms | Permissions Required | Last Updated|
 | ------ | ------------ | -------------- | ---------- |--------------------- |-----------|
-|Defense Evasion | T1562.001 |Disable or Modify | Linux,MacOs,windows| root                 | [YYYY-MM-DD]|
+|Defense Evasion | T1562.001 |Disable or Modify | Linux,MacOs,windows| root,Administrator                | 2025-04-02|
 
 
 ### 2. Scope
 - **Objective:** Detect and respond to an agent that has been disconnected for an extended period.
-- **Use Case:** Address scenarios where an agent stops reporting for **7+ days**.
+- **Use Case:** Address scenarios where an agent stops or disconnected for a long period of time.
 - **Applicable Systems:** Wazuh-monitored endpoints (Linux, Windows, MacOS).
 
 ### 3. Trigger Conditions
@@ -30,11 +30,15 @@
 - Disable agent-related access if compromise is suspected.
 
 #### 4.3 Eradication & Recovery
-- Restart the agent service remotely.
+- Restart the agent service [remotely](https://documentation.wazuh.com/current/user-manual/reference/tools/agent-control.html#agent-control).
 - If the agent is unreachable:
   - **Check network connectivity** (firewall, DNS, VPN).
   - **Verify system logs** for crashes or failures.
-  - **Reinstall the agent** if necessary.
+    ```
+    tail -f /var/ossec/logs/ossec.log
+    ```
+
+  - **Reinstall the agent** if necessary. [Documentation](https://adorsys.atlassian.net/wiki/spaces/Wazuh/pages/1413742931/Wazuh+Agent+Enrollment+guide)
 
 #### 4.4 Post-Incident Review
 - Document the root cause and corrective actions.
@@ -42,7 +46,7 @@
 - Conduct a brief **team debriefing** on findings.
 
 ### 5. References & Documentation
-- **MITRE ATT&CK Tactics:** Persistence (T1547)
+- **MITRE ATT&CK Tactics:** [Documentation](https://attack.mitre.org/techniques/T1562/001/)
 - **Wazuh Documentation:** Agent connection monitoring, [agent state](https://documentation.wazuh.com/current/user-manual/reference/tools/wazuh-control.html)
 
 
