--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28500.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28500.md
@@ -3,7 +3,7 @@
 ---
 
 #### **Objective**  
-Configure `/tmp` as a separate `tmpfs` filesystem with secure mount options (`noexec`, `nosuid`, `nodev`) using either `/etc/fstab` or `systemd`'s `tmp.mount`. This prevents execution of malicious code and hard-link attacks.
+Configure `/tmp` as a separate `tmpfs` filesystem with secure mount options (`noexec`, `nosuid`, `nodev`) using `/etc/fstab`. This prevents execution of malicious code and hard-link attacks.
 
 ---
 
@@ -17,13 +17,21 @@ ls -ld /tmp  # Verify permissions (should be 1777)
 - If `/tmp` is already a separate `tmpfs` or partition, proceed to adjust options.
 
 ### **Step 2: Configure via `/etc/fstab`**
+**Goal**: Remediate to issue `28500`
+
 1. **Backup `/etc/fstab`:**
    ```bash
    sudo cp /etc/fstab /etc/fstab.bak
    ```
 
 2. **Add or Update the `/tmp` Entry**  
-   Open `/etc/fstab` and add:
+   Open `/etc/fstab` 
+   
+   ```bash
+    sudo nano /etc/fstab
+    ```
+   
+   and add this line:
    ```
    tmpfs  /tmp  tmpfs  rw,nosuid,nodev,noexec,relatime,size=2G  0  0
    ```
@@ -32,10 +40,6 @@ ls -ld /tmp  # Verify permissions (should be 1777)
      - `nodev`: Ignores device files.
      - `noexec`: Prevents execution of binaries.
      - `size=2G`: Limits `/tmp` size to 2GB (adjust as needed).
-
-    ```bash
-    sudo nano /etc/fstab
-    ```
 
     ---
 
@@ -48,18 +52,14 @@ ls -ld /tmp  # Verify permissions (should be 1777)
     ---
 
     #### **4. Manually Mount `/tmp` as `tmpfs`**
-    Force-unmount the existing `/tmp` (if part of the root filesystem) and mount it fresh:
+    Manually mount the new `/tmp`:
     ```bash
-    # Unmount (may fail if busy – proceed to Step 4 if needed)
-    sudo umount /tmp
-
-    # Mount manually
     sudo mount -t tmpfs -o rw,nosuid,nodev,noexec,relatime,size=2G tmpfs /tmp
     ```
 
     ---
 
-    #### **5. Resolve "Target is Busy" Error**
+    #### **5. Resolve "Target is Busy" Error (If encountered)**
     If unmounting fails because `/tmp` is in use:
     ```bash
     # Switch to single-user mode (minimal environment)
@@ -117,9 +117,16 @@ ls -ld /tmp  # Verify permissions (should be 1777)
 
     ---
 
-### **Step 3: Adjust options**
+### **Step 3: Adjust options (If /tmp is already a separate partition)**
 1. **Update the `/tmp` Entry**  
-   Open `/etc/fstab` and add:
+   Open `/etc/fstab` 
+   
+    ```bash
+    sudo nano /etc/fstab
+    ```
+   
+   and update the `/tmp`line with the needed options:
+   
    ```
    tmpfs  /tmp  tmpfs  rw,nosuid,nodev,noexec,relatime,size=2G  0  0
    ```
@@ -128,10 +135,6 @@ ls -ld /tmp  # Verify permissions (should be 1777)
      - `nodev`: Ignores device files.
      - `noexec`: Prevents execution of binaries.
      - `size=2G`: Limits `/tmp` size to 2GB (adjust as needed).
-
-    ```bash
-    sudo nano /etc/fstab
-    ```
 
     ---
 2. **Stop Services Using `/tmp`**
