doc: add details to playbook of issue 28500

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28500.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28500.md
@@ -13,10 +13,10 @@ Check how `/tmp` is currently mounted:
 mount | grep /tmp
 ls -ld /tmp  # Verify permissions (should be 1777)
 ```
-- If it’s part of the root filesystem, proceed with remediation.
-- If `/tmp` is already a separate `tmpfs` or partition, proceed to adjust options.
+- If it’s part of the root filesystem, proceed with remediation (**`Step 2`**).
+- If `/tmp` is already a separate `tmpfs` or partition, proceed to adjust options (**`Step 3`**)..
 
-### **Step 2: Configure via `/etc/fstab`**
+### **Step 2: Create separate partition using `/etc/fstab`**
 **Goal**: Remediate to issue `28500`
 
 1. **Backup `/etc/fstab`:**
@@ -125,7 +125,7 @@ ls -ld /tmp  # Verify permissions (should be 1777)
     sudo nano /etc/fstab
     ```
    
-   and update the `/tmp`line with the needed options:
+   and update the `/tmp` line with the needed options:
    
    ```
    tmpfs  /tmp  tmpfs  rw,nosuid,nodev,noexec,relatime,size=2G  0  0
