--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28500.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28500.md
@@ -14,176 +14,147 @@ mount | grep /tmp
 ls -ld /tmp  # Verify permissions (should be 1777)
 ```
 - If it’s part of the root filesystem, proceed with remediation (**`Step 2`**).
-- If `/tmp` is already a separate `tmpfs` or partition, proceed to adjust options (**`Step 3`**)..
+- If `/tmp` is already a separate `tmpfs` or partition, proceed to adjust options (**`Step 3`**).
 
-### **Step 2: Create separate partition using `/etc/fstab`**
-**Goal**: Remediate to issue `28500`
+### **Step 2: Create Separate Partition Using `/etc/fstab`**
 
-1. **Backup `/etc/fstab`:**
-   ```bash
-   sudo cp /etc/fstab /etc/fstab.bak
-   ```
+#### 1. **Backup `/etc/fstab`:**
+```bash
+sudo cp /etc/fstab /etc/fstab.bak
+```
 
-2. **Add or Update the `/tmp` Entry**  
-   Open `/etc/fstab` 
-   
-   ```bash
-    sudo nano /etc/fstab
-    ```
-   
-   and add this line:
-   ```
-   tmpfs  /tmp  tmpfs  rw,nosuid,nodev,noexec,relatime,size=2G  0  0
-   ```
-   - **Options Explained:**
-     - `nosuid`: Blocks setuid binaries.
-     - `nodev`: Ignores device files.
-     - `noexec`: Prevents execution of binaries.
-     - `size=2G`: Limits `/tmp` size to 2GB (adjust as needed).
+#### 2. **Add or Update the `/tmp` Entry** 
+Open `/etc/fstab`:
+```bash
+sudo nano /etc/fstab
+```
+Add this line:
+```bash
+tmpfs  /tmp  tmpfs  rw,nosuid,nodev,noexec,relatime,size=2G  0  0
+```
+- **Options Explained:**
+  - `nosuid`: Blocks setuid binaries.
+  - `nodev`: Ignores device files.
+  - `noexec`: Prevents execution of binaries.
+  - `size=2G`: Limits `/tmp` size to 2GB (adjust as needed).
 
-    ---
+#### 3. **Stop Services Using `/tmp`**
+Unmounting `/tmp` may fail if processes are using it. Stop critical services (optional):
+```bash
+sudo systemctl stop snapd.service unattended-upgrades.service cron.service
+```
 
-    #### **3. Stop Services Using `/tmp`**
-    Unmounting `/tmp` may fail if processes are using it. Stop critical services (optional):
-    ```bash
-    sudo systemctl stop snapd.service unattended-upgrades.service cron.service
-    ```
+#### 4. **Manually Mount `/tmp` as `tmpfs`**
+Manually mount the new `/tmp`:
+```bash
+sudo mount -t tmpfs -o rw,nosuid,nodev,noexec,relatime,size=2G tmpfs /tmp
+```
 
-    ---
+#### 5. **Resolve "Target is Busy" Error (If Encountered)**
+If unmounting fails because `/tmp` is in use:
+```bash
+# Switch to single-user mode (minimal environment)
+sudo systemctl rescue
 
-    #### **4. Manually Mount `/tmp` as `tmpfs`**
-    Manually mount the new `/tmp`:
-    ```bash
-    sudo mount -t tmpfs -o rw,nosuid,nodev,noexec,relatime,size=2G tmpfs /tmp
-    ```
+# Now unmount and mount
+sudo umount /tmp
+sudo mount -t tmpfs -o rw,nosuid,nodev,noexec,relatime,size=2G tmpfs /tmp
 
-    ---
+# Exit rescue mode
+exit
+```
 
-    #### **5. Resolve "Target is Busy" Error (If encountered)**
-    If unmounting fails because `/tmp` is in use:
-    ```bash
-    # Switch to single-user mode (minimal environment)
-    sudo systemctl rescue
+#### 6. **Test `/etc/fstab`**
+After manual mount succeeds, test if `/etc/fstab` works:
+```bash
+sudo umount /tmp
+sudo mount -a  # This mounts all entries in /etc/fstab
+```
 
-    # Now unmount and mount
-    sudo umount /tmp
-    sudo mount -t tmpfs -o rw,nosuid,nodev,noexec,relatime,size=2G tmpfs /tmp
+#### 7. **Verify `/tmp` Mount**
+Check if `/tmp` is now a `tmpfs` filesystem:
+```bash
+mount | grep /tmp
+```
+Output should show:
+```bash
+tmpfs on /tmp type tmpfs (rw,nosuid,nodev,noexec,relatime,size=2G)
+```
 
-    # Exit rescue mode
-    exit
-    ```
+#### 8. **Set Permissions**
+Ensure `/tmp` has the sticky bit (permissions `1777`):
+```bash
+sudo chmod 1777 /tmp
+ls -ld /tmp  # Should show "drwxrwxrwt"
+```
 
-    ---
+#### 9. **Reboot and Confirm**
+Reboot to ensure `/tmp` mounts automatically:
+```bash
+sudo reboot
+```
+After reboot:
+```bash
+mount | grep /tmp  # Confirm tmpfs is active
+```
 
-    #### **6. Test `/etc/fstab`**
-    After manual mount succeeds, test if `/etc/fstab` works:
-    ```bash
-    sudo umount /tmp
-    sudo mount -a  # This mounts all entries in /etc/fstab
-    ```
+### **Step 3: Adjust Options (If `/tmp` is Already a Separate Partition)**
+#### 1. **Update the `/tmp` Entry**  
+Open `/etc/fstab`:
+```bash
+sudo nano /etc/fstab
+```
+Update the `/tmp` line with the needed options:
+```bash
+tmpfs  /tmp  tmpfs  rw,nosuid,nodev,noexec,relatime,size=2G  0  0
+```
+- **Options Explained:**
+  - `nosuid`: Blocks setuid binaries.
+  - `nodev`: Ignores device files.
+  - `noexec`: Prevents execution of binaries.
+  - `size=2G`: Limits `/tmp` size to 2GB (adjust as needed).
 
-    ---
+#### 2. **Stop Services Using `/tmp`**
+Unmounting `/tmp` may fail if processes are using it. Stop critical services (optional):
+```bash
+sudo systemctl stop snapd.service unattended-upgrades.service cron.service
+```
 
-    #### **7. Verify `/tmp` Mount**
-    Check if `/tmp` is now a `tmpfs` filesystem:
-    ```bash
-    mount | grep /tmp
-    ```
-    Output should show:
-    ```
-    tmpfs on /tmp type tmpfs (rw,nosuid,nodev,noexec,relatime,size=2G)
-    ```
+#### 3. **Test `/etc/fstab`**
+After manual mount succeeds, test if `/etc/fstab` works:
+```bash
+sudo umount /tmp
+sudo mount -a  # This mounts all entries in /etc/fstab
+```
 
-    ---
+#### 4. **Verify `/tmp` Mount**
+Check if `/tmp` has the adequate options:
+```bash
+mount | grep /tmp
+```
+Output should show:
+```bash
+tmpfs on /tmp type tmpfs (rw,nosuid,nodev,noexec,relatime,size=2G)
+```
 
-    #### **8. Set Permissions**
-    Ensure `/tmp` has the sticky bit (permissions `1777`):
-    ```bash
-    sudo chmod 1777 /tmp
-    ls -ld /tmp  # Should show "drwxrwxrwt"
-    ```
+#### 5. **Set Permissions**
+Ensure `/tmp` has the sticky bit (permissions `1777`):
+```bash
+sudo chmod 1777 /tmp
+ls -ld /tmp  # Should show "drwxrwxrwt"
+```
 
-    ---
-
-    #### **9. Reboot and Confirm**
-    Reboot to ensure `/tmp` mounts automatically:
-    ```bash
-    sudo reboot
-    ```
-    After reboot:
-    ```bash
-    mount | grep /tmp  # Confirm tmpfs is active
-    ```
-
-    ---
-
-### **Step 3: Adjust options (If /tmp is already a separate partition)**
-1. **Update the `/tmp` Entry**  
-   Open `/etc/fstab` 
-   
-    ```bash
-    sudo nano /etc/fstab
-    ```
-   
-   and update the `/tmp` line with the needed options:
-   
-   ```
-   tmpfs  /tmp  tmpfs  rw,nosuid,nodev,noexec,relatime,size=2G  0  0
-   ```
-   - **Options Explained:**
-     - `nosuid`: Blocks setuid binaries.
-     - `nodev`: Ignores device files.
-     - `noexec`: Prevents execution of binaries.
-     - `size=2G`: Limits `/tmp` size to 2GB (adjust as needed).
-
-    ---
-2. **Stop Services Using `/tmp`**
-    Unmounting `/tmp` may fail if processes are using it. Stop critical services (optional):
-    ```bash
-    sudo systemctl stop snapd.service unattended-upgrades.service cron.service
-    ```
-    ---
-3. **Test `/etc/fstab`**
-
-    After manual mount succeeds, test if `/etc/fstab` works:
-    ```bash
-    sudo umount /tmp
-    sudo mount -a  # This mounts all entries in /etc/fstab
-    ```
-    ---
-
-4. **Verify `/tmp` Mount**
-
-    Check if `/tmp` has the adequate options:
-
-    ```bash
-    mount | grep /tmp
-    ```
-    Output should show:
-    ```
-    tmpfs on /tmp type tmpfs (rw,nosuid,nodev,noexec,relatime,size=2G)
-    ```
----
-5. **Set Permissions**
-
-    Ensure `/tmp` has the sticky bit (permissions `1777`):
-    ```bash
-    sudo chmod 1777 /tmp
-    ls -ld /tmp  # Should show "drwxrwxrwt"
-    ```
----
-6. **9. Reboot and Confirm**
-
-    Reboot to ensure `/tmp` mounts automatically:
-    ```bash
-    sudo reboot
-    ```
-    After reboot:
-    ```bash
-    mount | grep /tmp  # Confirm tmpfs is active and options are correct
-    ```
+#### 6. **Reboot and Confirm**
+Reboot to ensure `/tmp` mounts automatically:
+```bash
+sudo reboot
+```
+After reboot:
+```bash
+mount | grep /tmp  # Confirm tmpfs is active and options are correct
+```
 
 ### **Summary**
-By isolating `/tmp` as a `tmpfs` filesystem with `noexec`, `nosuid`, and `nodev`, you mitigate risks of code execution and hard-link attacks. Choose the configuration method (traditional `fstab` or systemd-based) that aligns with your environment. 
+By isolating `/tmp` as a `tmpfs` filesystem with `noexec`, `nosuid`, and `nodev`, you mitigate risks of code execution and hard-link attacks. Choose the configuration method (traditional `fstab` or systemd-based) that aligns with your environment.
 
 **NOTE: This resolves issues ID 28500-28503**
