doc: add Issue ID's that playbook 28590 should resolve

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28590.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28590.md
@@ -92,3 +92,4 @@ sudo systemctl status auditd  # Verify service status (should show "active (runn
 
 ### **Summary**
 By following this playbook, you ensure that system events are captured via `auditd`, aiding in the detection of unauthorized access. Regularly review audit logs and rules to maintain security compliance.
+This Playbook should resolve Configuration Assessment ID: `28590, 28591, 28594, 28606, 28610`.
