--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28604.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28604.md
@@ -1,131 +1,41 @@
-### Playbook: Configure Audit Rules for AppArmor MAC Policy Monitoring
+# Persistent Configuration Failure Analysis - ID: [28604]
 
-#### **Purpose**  
-Ensure audit rules are configured to monitor unauthorized changes to AppArmor configuration files in `/etc/apparmor/` and `/etc/apparmor.d/`, which enforce Mandatory Access Controls (MAC).
-
----
-
-### **Step 1: Verify Existing Audit Rules**
-**Purpose**: Check if the required rules are already active.  
-**Command**:  
-```bash
-sudo auditctl -l | grep -E '/etc/apparmor(/|.d/).*-p wa.*-k MAC-policy'
-```  
-**Expected Result**:  
-Two lines should appear:  
-```
--w /etc/apparmor/ -p wa -k MAC-policy  
--w /etc/apparmor.d/ -p wa -k MAC-policy
-```  
-**If the rules are present**: Proceed to **Step 4** for verification.  
-**If the rules are missing**: Proceed to **Step 2**.
+**Status:** 🚨 Still Failing (Post-Playbook Execution)  
+**Date:** [2025-05-13]  
+**Last Investigation:** [2025-05-13]  
+**Playbook Used:** [28604.md]()
 
 ---
 
-### **Step 2: Create or Edit Audit Rules File**
-**Purpose**: Add rules to monitor writes/attribute changes to AppArmor directories.  
+## Investigation Summary
 
-1. **Navigate to the rules directory**:  
-   ```bash
-   cd /etc/audit/rules.d/
+### Observed Behavior
+
+- **Expected Outcome**:  
+  The playbook should pass the configuration assessment with the following conditions:
+
+1. `c:auditctl -l` → `r:^-w && r:/etc/apparmor.d/ && r:-p wa && r:-k MAC-policy|key=MAC-policy`
+2. `c:auditctl -l` → `r:^-w && r:/etc/apparmor/ && r:-p wa && r:-k MAC-policy|key=MAC-policy`
+3. `d:/etc/audit/rules.d`
+4. `d:/etc/audit/rules.d` → `r:\.+.rules$`
+5. `d:/etc/audit/rules.d` → `r:\.+.rules$` → `r:^-w && r:/etc/apparmor.d/ && r:-p wa && r:-k MAC-policy|key=MAC-policy`
+6. `d:/etc/audit/rules.d` → `r:\.+.rules$` → `r:^-w && r:/etc/apparmor/ && r:-p wa && r:-k MAC-policy|key=MAC-policy`
+
+
+- **Actual Outcome**:  
+  Running the command `sudo auditctl -l` shows the following output regarding the network environment rules:
+
+   ```plaintext
+   -w /etc/apparmor -p wa -k MAC-policy
+   -w /etc/apparmor.d -p wa -k MAC-policy
    ```
 
-2. **Create/Edit a rules file**:  
-   ```bash
-   sudo nano 50-MAC-policy.rules  # Replace "nano" with your preferred editor.
-   ```
+   ### Deviation Evidence
 
-3. **Add the following lines**:  
-   ```bash
-   -w /etc/apparmor/ -p wa -k MAC-policy
-   -w /etc/apparmor.d/ -p wa -k MAC-policy
-   ```  
-   **Save and exit** the editor.
+   In condition **1 & 2** of the list above, the required output shows `r:/etc/apparmor.d/`& `r:/etc/apparmor/`. However, the forward slash at the end of the directory is not found in the actual outcome, therefore causing conflict. 
+   
+   When the rule is loaded, the trailing slash is dropped, preventing the condition from being met.
 
 ---
 
-### **Step 3: Load the New Rules**
-**Purpose**: Merge and activate the new audit rules.  
 
-1. **Merge rules into the active configuration**:  
-   ```bash
-   sudo augenrules --load
-   ```
-
-2. **Verify rules are loaded**:  
-   ```bash
-   sudo auditctl -l | grep 'MAC-policy'
-   ```  
-   **Expected Result**: The two rules from Step 2 should appear.
-
----
-
-### **Step 4: Verify Rule Persistence**
-**Purpose**: Ensure rules are saved persistently in a `.rules` file.  
-
-1. **Check for files ending in `.rules`**:  
-   ```bash
-   ls -l /etc/audit/rules.d/*.rules
-   ```  
-   **Expected Result**: At least one file (e.g., `50-MAC-policy.rules`) should exist.
-
-2. **Confirm rules exist in the file(s)**:  
-   ```bash
-   sudo grep -r 'MAC-policy' /etc/audit/rules.d/
-   ```  
-   **Expected Result**:  
-   ```
-   /etc/audit/rules.d/50-MAC-policy.rules:-w /etc/apparmor/ -p wa -k MAC-policy
-   /etc/audit/rules.d/50-MAC-policy.rules:-w /etc/apparmor.d/ -p wa -k MAC-policy
-   ```
-
----
-
-### **Step 5: Check if Reboot is Required**
-**Purpose**: Determine if a reboot is needed to activate rules permanently.  
-
-1. **Check auditd status**:  
-   ```bash
-   auditctl -s | grep 'enabled'
-   ```  
-
-2. **Evaluate output**:  
-   - If the result is `enabled 2`, run:  
-     ```bash
-     echo "Reboot required to load rules."
-     ```  
-   - If `enabled 1`, rules are already active; no reboot needed.  
-
----
-
-### **Step 6: Post-Reboot Verification (If Required)**
-**Purpose**: Confirm rules are active after reboot.  
-
-1. **Reboot the system**:  
-   ```bash
-   sudo reboot
-   ```  
-
-2. **Re-run Step 1** to ensure rules are present in `auditctl -l`.
-
----
-
-### **Notes**  
-1. **Alternative MAC Systems**:  
-   - If using SELinux or another MAC system, replace `/etc/apparmor*` with the relevant directories (e.g., `/etc/selinux/`).  
-2. **Audit Logs**:  
-   - Monitor logs at `/var/log/audit/audit.log` for `key="MAC-policy"` entries.  
-3. **File Permissions**:  
-   Ensure rules files in `/etc/audit/rules.d/` have secure permissions (e.g., `root:root` ownership and `640` permissions).
-
----
-
-### **Troubleshooting**  
-- **Rules Not Loading**:  
-  - Run `sudo auditctl -R /etc/audit/rules.d/50-MAC-policy.rules` to force-load the file.  
-- **No `.rules` Files Found**:  
-  - Ensure the `auditd` package is installed (`sudo apt-get install auditd` or `sudo yum install audit`).  
-
----
-
-**Outcome**: The system will audit unauthorized changes to AppArmor configurations, enhancing security against MAC policy tampering.
