doc: add missing image in doc

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
@@ -101,6 +101,7 @@ Here's a step-by-step playbook to create separate `/var`, `/var/tmp`, `/var/log`
 5.  **Apply All Pending Operations:**
     * Click the "Apply All Operations" (green checkmark) button in the GParted toolbar. Confirm the warning. This will format the new partitions and apply all changes. This step will take the longest.
 
+![GParted Resized](./images/image%20copy%208.png)
 
     ### Partition Troubleshooting  
     - **"Partition is busy" error:**  
