chore: add image of example gparted window

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
@@ -1,12 +1,12 @@
 
 
-### Step-by-Step Playbook:    
+### Step-by-Step Playbook: Create Partition
 
 Here's a step-by-step playbook to create separate `/var`, `/var/tmp`, `/var/log`, `/var/log/audit` and `/home` partitions from existing free space on your Ubuntu installation, assuming you have space to reallocate.
 
-- **Goal:**
-* Shrink the existing `/dev/nvme0n1p5` (your current root partition).
-* Create new partitions for `/var`, `/var/tmp`, and `/home` from the freed space.
+**Goal:**
+* Shrink the existing `/dev/nvme0n1p5`
+* Create new partitions for ``/var`, `/var/tmp`, `/var/log`, `/var/log/audit` and `/home` from the freed space.
 * Move existing data to the new partitions.
 * Update `fstab` to mount the new partitions at boot.
 
@@ -19,12 +19,12 @@ Here's a step-by-step playbook to create separate `/var`, `/var/tmp`, `/var/log`
 * **Backup Your Data:** This process involves resizing and creating partitions. While these steps are generally safe, there's always a small risk of data loss. **BACK UP ALL IMPORTANT DATA FROM YOUR `/` (root) and `/home` directories BEFORE PROCEEDING.**
 * **Free Space:** You'll need sufficient contiguous unallocated space to create these new partitions. 
 * **Time:** This process can take some time, especially if you have a lot of data to move or a large partition to resize.
-* **Nomenclature:** I'll use `/dev/nvme0n1p5` as your existing root partition, based on your image. Adjust if your actual root partition is different.
+
 
 #### **Phase 1: Prepare the Environment (Live USB)**
 
 1.  **Boot from Ubuntu Live USB (Try Ubuntu):**
-    * You've already done this. This is crucial because you cannot modify partitions that are currently in use by the running OS.
+    * This is crucial because you cannot modify partitions that are currently in use by the running OS.
 
 2.  **Open GParted:**
     * From the Live Ubuntu desktop, open the GParted application. You can usually find it by searching in the applications menu.
@@ -34,10 +34,10 @@ Here's a step-by-step playbook to create separate `/var`, `/var/tmp`, `/var/log`
 
 #### **Phase 2: Partitioning with GParted**
 
-*(Based on your image, your root partition seems to be `/dev/nvme0n1p5`.)*
 
 1.  **Identify Your Existing Root Partition:**
     * In GParted, locate your main Ubuntu installation's root partition. In the example image, it is `/dev/nvme0n1p5` (ext4, 476.68 GiB).
+    ![GParted](./images/image.png) 
 
 2.  **Shrink the Existing Root Partition (`/dev/nvme0n1p5`):**
     * Right-click on `/dev/nvme0n1p5`.
