doc(fix): fix configuration issues on 28504

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
@@ -1,12 +1,10 @@
-
-
 ### Step-by-Step Playbook: Create Partition
 
 Here's a step-by-step playbook to create separate `/var`, `/var/tmp`, `/var/log`, `/var/log/audit` and `/home` partitions from existing free space on your Ubuntu installation, assuming you have space to reallocate.
 
 **Goal:**
 * Shrink the existing `/dev/nvme0n1p5`
-* Create new partitions for ``/var`, `/var/tmp`, `/var/log`, `/var/log/audit` and `/home` from the freed space.
+* Create new partitions for `/var`, `/var/tmp`, `/var/log`, `/var/log/audit` and `/home` from the freed space.
 * Move existing data to the new partitions.
 * Update `fstab` to mount the new partitions at boot.
 
@@ -103,13 +101,13 @@ Here's a step-by-step playbook to create separate `/var`, `/var/tmp`, `/var/log`
 
 ![GParted Resized](./images/image%20copy%208.png)
 
-    ### Partition Troubleshooting  
-    - **"Partition is busy" error:**  
-    - Reboot into Live USB if modifying system disk.  
-    - Ensure no processes use the partition:  
-        ```bash
-        lsof /dev/sdXN  # Replace with partition ID
-        ```  
+### Partition Troubleshooting  
+- **"Partition is busy" error:**  
+- Reboot into Live USB if modifying system disk.  
+- Ensure no processes use the partition:  
+    ```bash
+    lsof /dev/sdXN  # Replace with partition ID
+    ```  
     ---
 
 #### **Phase 3: Data Migration and fstab Configuration**
