doc(fix): fix paths of renaming original directories

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
@@ -181,9 +181,10 @@ Now that the partitions are physically created, you need to copy the data and te
         ```bash
         sudo mv /mnt/ubuntu_root/var /mnt/ubuntu_root/var_old
         sudo mv /mnt/ubuntu_root/home /mnt/ubuntu_root/home_old
-        sudo mv /mnt/ubuntu_root/var/tmp /mnt/ubuntu_root/var_tmp_old
-        sudo mv /mnt/ubuntu_root/var/log /mnt/ubuntu_root/var_log_old
-        sudo mv /mnt/ubuntu_root/var/log/audit /mnt/ubuntu_root/var_logaudit_old # Note: var/tmp, /var/log & /var/log/audit is inside var
+        sudo mv /mnt/ubuntu_root/var/tmp /mnt/ubuntu_root/var/tmp_old
+        sudo mv /mnt/ubuntu_root/var/log/audit /mnt/ubuntu_root/var/log/audit_old
+        sudo mv /mnt/ubuntu_root/var/log /mnt/ubuntu_root/var/log_old
+ # Note: var/tmp, /var/log & /var/log/audit is inside var
         ```
 
 7.  **Update `fstab`:**
