chore: update 28504 to include /var partition

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
@@ -1,274 +1,128 @@
-### Step-by-Step Playbook: Create Partition
+## Create `/var` Partition
 
-Here's a step-by-step playbook to create separate `/var`, `/var/tmp`, `/var/log`, `/var/log/audit` and `/home` partitions from existing free space on your Ubuntu installation, assuming you have space to reallocate.
+### Preliminary Backup Step
 
-**Goal:**
-* Shrink the existing `/dev/nvme0n1p5`
-* Create new partitions for `/var`, `/var/tmp`, `/var/log`, `/var/log/audit` and `/home` from the freed space.
-* Move existing data to the new partitions.
-* Update `fstab` to mount the new partitions at boot.
+Before proceeding, ensure you have a recent backup of critical data:
 
-**Ubuntu-Specific Notes:**  
-- Requires `gparted` installed (default on Ubuntu Live USB; use `sudo apt install gparted` on installed systems).  
-- Operations affecting system partitions may require booting from a **Ubuntu Live USB**. 
+```bash
+sudo rsync -avh --progress /var/ /path/to/backup/var_backup_
+```
 
-**Important Considerations Before You Start:**
+Verify the backup completed successfully before moving on.
 
-* **Backup Your Data:** This process involves resizing and creating partitions. While these steps are generally safe, there's always a small risk of data loss. **BACK UP ALL IMPORTANT DATA FROM YOUR `/` (root) and `/home` directories BEFORE PROCEEDING.**
-* **Free Space:** You'll need sufficient contiguous unallocated space to create these new partitions. 
-* **Time:** This process can take some time, especially if you have a lot of data to move or a large partition to resize.
+### Phase 1: Prepare the Environment (Live USB)
 
+1. **Boot from Ubuntu Live USB (Try Ubuntu):**
 
-#### **Phase 1: Prepare the Environment (Live USB)**
+   * You cannot modify partitions in use by the running OS.
 
-1.  **Boot from Ubuntu Live USB (Try Ubuntu):**
-    * This is crucial because you cannot modify partitions that are currently in use by the running OS.
+2. **Open GParted:**
 
-2.  **Open GParted:**
-    * From the Live Ubuntu desktop, open the GParted application. You can usually find it by searching in the applications menu.
+   * Search and launch **GParted** from the Live Ubuntu desktop.
 
 ---
 
+### Phase 2: Partitioning with GParted (Partition for `/var`)
 
-#### **Phase 2: Partitioning with GParted**
+1. **Identify Your Existing Root Partition:**
 
+   * Locate your main Ubuntu installation’s root partition (e.g., `/dev/nvme0n1p5`).
 
-1.  **Identify Your Existing Root Partition:**
-    * In GParted, locate your main Ubuntu installation's root partition. In the example image, it is `/dev/nvme0n1p5` (ext4, 476.68 GiB).
-    ![GParted](./images/image.png) 
+2. **Shrink the Existing Root Partition:**
 
-2.  **Shrink the Existing Root Partition (`/dev/nvme0n1p5`):**
-    * Right-click on `/dev/nvme0n1p5`.
-    * Select "Resize/Move".
-    * A dialog box will appear. You'll see "Free space preceding (MiB)", "New size (MiB)", and "Free space following (MiB)".
-    ![GParted Resize](./images/image%20copy%204.png)  
-    * **Drag the right arrow** to the left, or manually enter a "New size (MiB)" that leaves enough "Free space following (MiB)" for your new `/var`, `/var/tmp`, `/var/log`, `/var/log/audit` and `/home` partitions.
-    ![GParted Resized](./images/image%20copy%207.png)
-    * Click "Resize/Move".
+   * Right-click on `/dev/nvme0n1p5` and select **Resize/Move**.
+   * Adjust **New size (MiB)** to free up at least **30 GiB** for `/var` (e.g., enter `30720 MiB` for the new partition).
+   * Click **Resize/Move**, then click the green checkmark to **Apply All Operations**.
 
-**Recommendation for partition size with 512 GB example**
+3. **Create New Partition for `/var`:**
 
----
+   * In the now-unallocated space:
 
-| Directory                 | Recommended Size | Filesystem | Notes                                                                                                                                                                                                                                                                                                                           |
-| :------------------------ | :--------------- | :--------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| **EFI System Partition (ESP)** | 512 MB           | FAT32      | Essential for UEFI boot.                                                                                                                                                                                                                                                                                                        |
-| **`/boot`** | 1 GB             | ext4       | Contains kernel and bootloader files. Separate from LVM for simpler boot.                                                                                                                                                                                                                                                         |
-| **Swap** | 8 GB             | swap       | Adjust based on your RAM (e.g., 1x-2x RAM if <8GB, 0.5x-1x RAM if >8GB). Allocate RAM size if you plan to use hibernation.                                                                                                                                                                                                                |
-| **`/` (Root)** | 60 GB            | ext4       | Primary OS files, applications, and general system data. This provides a good balance for system needs and future package installations.                                                                                                                                                                                               |
-| **`/home`** | 250 GB           | ext4       | User home directories. This will likely hold the most data, so allocate generously.                                                                                                                                                                                                                                               |
-| **`/tmp`** | 5 GB             | ext4       | Temporary files. If you have sufficient RAM, consider using `tmpfs` (RAM-backed) for performance and security instead of a dedicated disk partition. CIS often mandates `nodev`, `nosuid`, `noexec` mount options.                                                                                                                    |
-| **`/var`** | 30 GB            | ext4       | Variable data, including logs, caches, and potentially web server content or databases. This partition can grow significantly, especially on busy servers.                                                                                                                                                                           |
-| **`/var/tmp`** | 5 GB             | ext4       | Temporary files that persist across reboots. CIS often mandates `nodev`, `nosuid`, `noexec` mount options.                                                                                                                                                                                                                         |
-| **`/var/log`** | 15 GB            | ext4       | System logs. Can grow quickly, so ensure log rotation is properly configured. CIS often mandates `nodev`, `nosuid`, `noexec` mount options.                                                                                                                                                                                        |
-| **`/var/log/audit`** | 5 GB             | ext4       | Audit logs. Critical for security monitoring and compliance. CIS often mandates `nodev`, `nosuid`, `noexec` mount options.                                                                                                                                                                                                        |
-| **`/dev/shm`** | (RAM-backed)     | tmpfs      | This is a memory-backed filesystem (tmpfs), not a disk partition. Its size is dynamic and limited by your RAM. The CIS benchmark requires specific mount options (`nodev`, `nosuid`, `noexec`) for security.                                                                                                                         |
-| **LVM Free Space** | ~129.5 GB        | N/A        | It's highly recommended to use **LVM (Logical Volume Management)** for the main data partitions. This remaining space within the LVM Volume Group allows for flexible future expansion of any of your logical volumes as needed, without re-partitioning the entire disk.                                                     |
-| **Total Allocated Disk Space** | **~389.5 GB** |            | This total accounts for the disk-based partitions. Remember that `/dev/shm` is RAM-backed and not included in this disk space calculation. The LVM Free Space ensures you have room to grow.                                                                                                                               |
+     * Right-click on **unallocated** → **New**.
+     * Set **New size (MiB)** to `30720` (for 30 GiB).
+     * Set **File system** to `ext4`.
+     * Set **Label** to `VAR`.
+     * Click **Add**, then click **Apply All Operations** to format and create `/var`.
+
+> **Note:** Adjust the size if you require more or less space for variable data.
 
 ---
 
-3.  **Apply Pending Operations (Optional but Recommended):**
-    * At this point, the changes are staged. It's often good practice to apply the shrink operation before creating new partitions, especially if you're dealing with a large partition.
-    * Click the "Apply All Operations" (green checkmark) button in the GParted toolbar. Confirm the warning. This might take some time.
+### Phase 3: Data Migration and `fstab` Configuration
 
-4.  **Create New Partitions for /var, /var/tmp, and /home:**
-    * In the unallocated space that you just created:
-        * **Create `/var`:**
-            * Right-click on the "unallocated" space.
-            * Select "New".
-            * Set "New size (MiB)" to your desired size for `/var` (e.g., 30720 MiB for 30 GiB).
-            * Set "File system" to `ext4`.
-            * Set "Label" to `VAR`.
-            * Click "Add".
-        * **Create `/var/tmp`:**
-            * Right-click on the remaining "unallocated" space.
-            * Select "New".
-            * Set "New size (MiB)" to your desired size for `/var/tmp` (e.g., 5120 MiB for 5 GiB).
-            * Set "File system" to `ext4`.
-            * Set "Label" to `VARTMP`.
-            * Click "Add".
-        * **Create `/home`:**
-            * Right-click on the remaining "unallocated" space.
-            * Select "New".
-            * Let it use the "Maximum size (MiB)" to occupy all remaining space.
-            * Set "File system" to `ext4`.
-            * Set "Label" to `HOME`.
-            * Click "Add".
+1. **Identify the New `/var` Partition Device and UUID:**
 
-5.  **Apply All Pending Operations:**
-    * Click the "Apply All Operations" (green checkmark) button in the GParted toolbar. Confirm the warning. This will format the new partitions and apply all changes. This step will take the longest.
+   * After creation, GParted will list it (e.g., `/dev/nvme0n1p6`).
+   * Right-click → **Information** → copy the **UUID**.
 
-![GParted Resized](./images/image%20copy%208.png)
+2. **Mount Partitions in Live USB Terminal:**
 
-### Partition Troubleshooting  
-- **"Partition is busy" error:**  
-- Reboot into Live USB if modifying system disk.  
-- Ensure no processes use the partition:  
-    ```bash
-    lsof /dev/sdXN  # Replace with partition ID
-    ```  
-    ---
+   ```bash
+   sudo mkdir /mnt/ubuntu_root
+   sudo mount /dev/nvme0n1p5 /mnt/ubuntu_root         # Mount existing root
+   sudo mkdir /mnt/new_var
+   sudo mount /dev/nvme0n1p6 /mnt/new_var               # Mount new /var partition
+   ```
 
-#### **Phase 3: Data Migration and fstab Configuration**
+3. **Copy `/var` Data:**
 
-Now that the partitions are physically created, you need to copy the data and tell your Ubuntu system where to find them.
+   ```bash
+   sudo rsync -avh --progress /mnt/ubuntu_root/var/ /mnt/new_var/
+   ```
 
-1.  **Identify New Partition Device Names:**
-    * After GParted finishes, note down the device names for your new partitions. They will likely be `/dev/nvme0n1p6`, `/dev/nvme0n1p7`, and `/dev/nvme0n1p8` (or similar, depending on existing partitions).
-    * You can also get their UUIDs, which is a more robust way to refer to them in `fstab`. In GParted, right-click on each new partition, select "Information," and copy the "UUID".
+   * **Verify** sizes:
 
-2.  **Open a Terminal:**
-    * From your Live Ubuntu desktop, open a terminal (Ctrl+Alt+T).
+     ```bash
+     du -sh /mnt/ubuntu_root/var
+     du -sh /mnt/new_var
+     ```
 
-3.  **Mount the Existing Root Partition (`/dev/nvme0n1pX`):**
-    * Create a temporary mount point:
-        ```bash
-        sudo mkdir /mnt/ubuntu_root
-        ```
-    * Mount your *existing* root partition (`nvme0n1pX`):
-        ```bash
-        sudo mount /dev/nvme0n1pX /mnt/ubuntu_root
-        ```
+4. **Rename Original `/var`:**
 
-4.  **Mount the New Partitions:**
-    * Create temporary mount points for the new partitions:
-        ```bash
-        sudo mkdir /mnt/new_var
-        sudo mkdir /mnt/new_vartmp
-        sudo mkdir /mnt/new_varlog
-        sudo mkdir /mnt/new_varlogaudit
-        sudo mkdir /mnt/new_home
-        ```
-    * Mount your new partitions:
-        ```bash
-        sudo mount /dev/nvme0n1pX /mnt/new_var    # Replace /dev/nvme0n1pX with your new /var partition device
-        sudo mount /dev/nvme0n1pY /mnt/new_vartmp # Replace /dev/nvme0n1pY with your new /var/tmp partition device
-        sudo mount /dev/nvme0n1pA /mnt/new_varlog # Replace /dev/nvme0n1pA with your new /var/log partition device
-        sudo mount /dev/nvme0n1pB /mnt/new_varlogaudit # Replace /dev/nvme0n1pB with your new /var/log/audit partition device
-        sudo mount /dev/nvme0n1pZ /mnt/new_home   # Replace /dev/nvme0n1pZ with your new /home partition device
-        ```
-        *(Example: `sudo mount /dev/nvme0n1p6 /mnt/new_var`)*
+   ```bash
+   sudo mv /mnt/ubuntu_root/var /mnt/ubuntu_root/var_old
+   ```
 
-5.  **Copy Data to New Partitions:**
-    * **For `/var`:**
-        ```bash
-        sudo rsync -avh --progress /mnt/ubuntu_root/var/ /mnt/new_var/
-        ```
-    * **For `/var/tmp`:**
-        ```bash
-        sudo rsync -avh --progress /mnt/ubuntu_root/var/tmp/ /mnt/new_vartmp/
-        ```
-    * **For `/var/log`:**
-    ```bash
-    sudo rsync -avh --progress /mnt/ubuntu_root/var/log /mnt/new_varlog/
-    ```
-    * **For `/var/log/audit`:**
-        ```bash
-        sudo rsync -avh --progress /mnt/ubuntu_root/var/log/audit /mnt/new_varlogaudit
-        ```
-    * **For `/home`:**
-        ```bash
-        sudo rsync -avh --progress /mnt/ubuntu_root/home/ /mnt/new_home/
-        ```
-    * **Verify data integrity (optional but highly recommended):** After copying, you can compare the sizes or list the contents to ensure everything was copied correctly.
-        * `du -sh /mnt/ubuntu_root/var` and `du -sh /mnt/new_var`
-        * `ls -la /mnt/ubuntu_root/home` and `ls -la /mnt/new_home`
+   * This acts as a backup. Once you confirm everything works, you may delete `/var_old`.
 
-6.  **Remove Original Directories (AFTER Successful Copy!):**
-    * **CRITICAL:** Only proceed with this step if you are absolutely sure the data has been copied successfully to the new partitions. Once you remove these, there's no going back easily.
-    * Rename the original directories as a backup for now, instead of deleting them. This is safer.
-        ```bash
-        sudo mv /mnt/ubuntu_root/var /mnt/ubuntu_root/var_old
-        sudo mv /mnt/ubuntu_root/home /mnt/ubuntu_root/home_old
-        sudo mv /mnt/ubuntu_root/var/tmp /mnt/ubuntu_root/var/tmp_old
-        sudo mv /mnt/ubuntu_root/var/log/audit /mnt/ubuntu_root/var/log/audit_old
-        sudo mv /mnt/ubuntu_root/var/log /mnt/ubuntu_root/var/log_old
- # Note: var/tmp, /var/log & /var/log/audit is inside var
-        ```
+5. **Update `fstab` of Installed System:**
 
-7.  **Update `fstab`:**
-    * The `fstab` file tells your system which partitions to mount at boot time.
-    * Edit the `fstab` file of your *installed* Ubuntu system:
-        ```bash
-        sudo nano /mnt/ubuntu_root/etc/fstab
-        ```
-    * Add new lines for `/var`, `/var/tmp`, and `/home`. It's highly recommended to use **UUIDs** instead of device names (`/dev/nvme0n1pX`) as they are more stable.
-        * **To get UUIDs:** You can use `sudo blkid` in the terminal to list all partitions and their UUIDs.
-        * **Example `fstab` entries (replace UUIDs with your actual UUIDs):**
+   ```bash
+   sudo nano /mnt/ubuntu_root/etc/fstab
+   ```
 
-            ```
-                # /var partition
-                /dev/nvme0n1p2 /var            ext4    defaults,nosuid,nodev        0       2
+   * Add an entry (replace `<UUID>` with the actual UUID):
 
-                #/var/tmp partition
-                /dev/nvme0n1p3  /var/tmp  ext4  defaults,nosuid,nodev,noexec  0  2
+     ```
+     UUID=<UUID>    /var    ext4    defaults,nosuid,nodev    0   2
+     ```
+   * Save (Ctrl+O, Enter) and exit (Ctrl+X).
 
-                # /var/log partition
-                /dev/nvme0n1p6  /var/log  ext4  defaults,nosuid,nodev,noexec  0  2
+6. **Unmount and Reboot:**
 
-                # /var/log/audit partition
-                /dev/nvme0n1p4  /var/log/audit  ext4  defaults,nosuid,nodev,noexec  0  2
+   ```bash
+   sudo umount /mnt/new_var
+   sudo umount /mnt/ubuntu_root
+   sudo reboot
+   ```
 
-                #/home partition
-                /dev/nvme0n1p7  /home  ext4  defaults,nosuid,nodev  0  2
-            ```
-            * **Explanation of `fstab` fields:**
-                1.  `UUID=...` or `/dev/nvme0n1pX`: The device or UUID of the partition.
-                2.  `/var`, `/var/tmp`, `/home`: The mount point.
-                3.  `ext4`: The file system type.
-                4.  `defaults`: Standard mount options (rw, suid, dev, exec, auto, nouser, async).
-                5.  `0`: `dump` utility setting (0 means don't dump).
-                6.  `2`: `fsck` order (1 for root, 2 for other boot-critical filesystems, 0 to skip).
+---
 
-    * Save the file (Ctrl+O, Enter) and exit nano (Ctrl+X).
+### Phase 4: Verification
 
-#### **Phase 4: Final Steps and Verification**
+1. After booting normally, in a terminal:
 
-1.  **Unmount All Partitions:**
-    ```bash
-    sudo umount /mnt/new_var
-    sudo umount /mnt/new_vartmp
-    sudo umount /mnt/new_home
-    sudo umount /mnt/new_varlog
-    sudo umount /mnt/new_varlogaudit
-    sudo umount /mnt/ubuntu_root
-    ```
+   ```bash
+   df -h | grep "/var"
+   ls -la /var
+   ```
 
-2.  **Reboot Your System:**
-    * Remove the Live USB.
-    * Reboot your computer:
-        ```bash
-        sudo reboot
-        ```
+   * Confirm `/var` is a separate mount with expected usage.
 
-3.  **Verify New Partitions:**
-    * After your system boots, open a terminal.
-    * Check if the new partitions are mounted correctly:
-        ```bash
-        df -h
-        ```
-        You should see separate entries for `/var`, `/var/tmp`, and `/home` with their respective sizes and usage.
-    * Verify the content:
-        ```bash
-        ls -la /var
-        ls -la /var/tmp
-        ls -ls /var/log
-        ls -la /var/log/audit
-        ls -la /home
-        ```
-    * Check for the old renamed directories:
-        ```bash
-        ls -la /var_old
-        ls -la /home_old
-        ```
-        These should now be empty if you moved them successfully, or contain the old data if you just renamed them as a backup.
+2. If everything looks correct, remove the backup folder:
 
-4.  **Clean Up (Optional, AFTER Successful Boot):**
-    * If everything is working perfectly, you can safely remove the `_old` directories to free up space:
-        ```bash
-        sudo rm -rf /var_old
-        sudo rm -rf /home_old
-        ```
+   ```bash
+   sudo rm -rf /var_old
+   ```
 
-This complete playbook should guide you through the process of creating and migrating your `/var`, `/var/tmp`, and `/home` directories to separate partitions. Remember to proceed with caution and verify each step.
+Congratulations! The `/var` directory is now on its own partition.
