fix: make step regarding fstab editing  clear

--- a/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
+++ b/Configuration Assesment/CIS Ubuntu Linux 22.04 LTS Benchmark v1.0.0./28504.md
@@ -91,7 +91,7 @@ Verify the backup completed successfully before moving on.
    sudo nano /mnt/ubuntu_root/etc/fstab
    ```
 
-   * Add an entry (replace `<UUID>` with the actual UUID):
+   * Add an entry (replace `<UUID>` with the actual UUID or replace `UUID=<UUID>` with device name `/dev/nvme0n1pX`):
 
      ```
      UUID=<UUID>    /var    ext4    defaults,nosuid,nodev    0   2
